[package]
name = "ash"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
futures = "0.3.7"
bytemuck = "1.4.1"
log = "0.4.11"
env_logger = "0.8.1"
ash-window = "0.5.0"
winit = "0.23.0"
eyre = "0.6.2"
color-eyre = "0.5.7"
ultraviolet = "0.7.5"
vk-mem = "0.2.2"
nalgebra = "0.23.0"

[build-dependencies]
eyre = "0.6.2"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
shaderc = "0.6"

[profile.release]
lto = 'thin'

[profile.dev.package.'*']
opt-level = 3
